Splitted harvest.js to multiple smaller modules, use Browserify for build
Also require libraries from npm instead of relying on globals.

'app' directory now contains the built version of the extension.
'src' has all the JS source code.
'test' has some basic tests for hour calculations, more will be added.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -8,7 +8,7 @@
     {
       "matches": ["https://*.harvestapp.com/*"],
       "css": ["styles.css"],
-      "js": ["jquery-2.1.1.min.js","localforage.min.js","mustache.min.js","moment.min.js","harvest.js"]
+      "js": ["harvest.js"]
     }
   ],
   "web_accessible_resources": [
