--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,9 @@
 {
   "name": "Harvest hour balance",
   "description": "Shows the current hour balance for logged in user",
-  "version": "1.43",
+  "version": "1.44",
   "manifest_version": 2,
+  "update_url": "http://www.google.com/",
   "permissions": [ "tts" ],
   "content_scripts": [
     {
